--- a/src/main/resources/assets/divinerpg/lang/it_it.json
+++ b/src/main/resources/assets/divinerpg/lang/it_it.json
@@ -1431,9 +1431,29 @@
   "tooltip.vethean": "Vethean",
   "tooltip.efficiency": "Efficienza: %s",
   "tooltip.noblock": "Non Può Bloccare",
-  "tooltip.effect.poisons": "Avvelena le entità per |seconds| secondi",
-  "tooltip.effect.burns": "Brucia le entità per |seconds| secondi",
-  "tooltip.effect.slows": "Rallenta le entità per |seconds| secondi",
+  "tooltip.effect.poisons": "Avvelena le entità per %s secondi",
+  "tooltip.effect.burns": "Brucia le entità per %s secondi",
+  "tooltip.effect.slows": "Rallenta le entità per %s secondi",
+  "tooltip.effect.skythle.increase": "%sx Scythe Damage",
+  "tooltip.effect.wither.protection": "Wither Protection",
+  "tooltip.effect.no_hunger": "Refills Hunger",
+  "tooltip.effect.melee.increase": "+%s Melee Damage",
+  "tooltip.effect.no_fall": "No Fall Damage",
+  "tooltip.effect.jump.increase": "%sx Jump Height",
+  "tooltip.effect.ranged.protection": "%s%% Ranged Damage Protection",
+  "tooltip.effect.speed": "%sx Movement Speed",
+  "tooltip.effect.magic.protection": "Poison and Magic Resistance",
+  "tooltip.effect.freeze": "Slows Hostile Mobs Within %s Blocks",
+  "tooltip.effect.ranged.increase": "+%s%% Ranged Damage",
+  "tooltip.effect.haste": "Increased Mining Speed",
+  "tooltip.effect.melee.protection": "%s%% Melee Protection",
+  "tooltip.effect.explosion.protection": "Explosion Protection",
+  "tooltip.effect.fire.protection": "Fire Protection",
+  "tooltip.effect.swim": "Swim Faster",
+  "tooltip.effect.underwater": "Breathe Underwater",
+  "tooltip.effect.block_protection": "Block Damage Protection",
+  "tooltip.effect.water.regen": "Health Regenerates Underwater",
+  "tooltip.effect.twilight_ore.drops": "Increased Twilight Ore Drops",
   "tooltip.divine_accumulator.launch": "Ti Lancia in aria",
   "tooltip.divine_accumulator.fall": "Non previene il danno da caduta",
   "tooltip.arcanium_attractor": "Attira le entità verso di te",
