--- a/src/main/resources/assets/divinerpg/lang/ru_ru.json
+++ b/src/main/resources/assets/divinerpg/lang/ru_ru.json
@@ -1384,6 +1384,26 @@
   "tooltip.damage.ranged": "# Ranged Damage",
   "tooltip.damage.both": "# Ranged and Melee Damage",
   "tooltip.damage.arcana": "# Arcana Damage",
+  "tooltip.effect.skythle.increase": "%sx Scythe Damage",
+  "tooltip.effect.wither.protection": "Wither Protection",
+  "tooltip.effect.no_hunger": "Refills Hunger",
+  "tooltip.effect.melee.increase": "+%s Melee Damage",
+  "tooltip.effect.no_fall": "No Fall Damage",
+  "tooltip.effect.jump.increase": "%sx Jump Height",
+  "tooltip.effect.melee.protection": "%s%% Melee Protection",
+  "tooltip.effect.explosion.protection": "Explosion Protection",
+  "tooltip.effect.fire.protection": "Fire Protection",
+  "tooltip.effect.swim": "Swim Faster",
+  "tooltip.effect.underwater": "Breathe Underwater",
+  "tooltip.effect.ranged.protection": "%s%% Ranged Damage Protection",
+  "tooltip.effect.speed": "%sx Movement Speed",
+  "tooltip.effect.magic.protection": "Poison and Magic Resistance",
+  "tooltip.effect.freeze": "Slows Hostile Mobs Within %s Blocks",
+  "tooltip.effect.ranged.increase": "+%s%% Ranged Damage",
+  "tooltip.effect.haste": "Increased Mining Speed",
+  "tooltip.effect.block_protection": "Block Damage Protection",
+  "tooltip.effect.water.regen": "Health Regenerates Underwater",
+  "tooltip.effect.twilight_ore.drops": "Increased Twilight Ore Drops",
   "tooltip.damage.reduction": "|percent| Damage Reduction (|percentFull| Full)",
   "tooltip.ammo": "Ammo: ",
   "tooltip.ammo.infinite": "Infinite Ammo",
@@ -1394,9 +1414,9 @@
   "tooltip.vethean": "Vethean",
   "tooltip.efficiency": "Efficiency: #",
   "tooltip.noblock": "Cannot Block",
-  "tooltip.effect.poisons": "Poisons mobs for |seconds| seconds",
-  "tooltip.effect.burns": "Burns mobs for |seconds| seconds",
-  "tooltip.effect.slows": "Slows mobs for |seconds| seconds",
+  "tooltip.effect.poisons": "Poisons mobs for %s seconds",
+  "tooltip.effect.burns": "Burns mobs for %s seconds",
+  "tooltip.effect.slows": "Slows mobs for %s seconds",
   "tooltip.divine_accumulator.launch": "Lauches you into the air",
   "tooltip.divine_accumulator.fall": "Does not prevent fall damage",
   "tooltip.arcanium_attractor": "Pulls mobs toward you",
