--- a/src/main/resources/assets/divinerpg/lang/en_us.json
+++ b/src/main/resources/assets/divinerpg/lang/en_us.json
@@ -1436,9 +1436,30 @@
   "tooltip.vethean": "Vethean",
   "tooltip.efficiency": "Efficiency: %s",
   "tooltip.noblock": "Cannot Block",
-  "tooltip.effect.poisons": "Poisons mobs for |seconds| seconds",
-  "tooltip.effect.burns": "Burns mobs for |seconds| seconds",
-  "tooltip.effect.slows": "Slows mobs for |seconds| seconds",
+  "tooltip.effect.poisons": "Poisons mobs for %s seconds",
+  "tooltip.effect.burns": "Burns mobs for %s seconds",
+  "tooltip.effect.skythle.increase": "%sx Scythe Damage",
+  "tooltip.effect.wither.protection": "Wither Protection",
+  "tooltip.effect.no_hunger": "Refills Hunger",
+  "tooltip.effect.melee.increase": "+%s Melee Damage",
+  "tooltip.effect.jump.increase": "%sx Jump Height",
+  "tooltip.effect.melee.protection": "%s%% Melee Protection",
+  "tooltip.effect.explosion.protection": "Explosion Protection",
+  "tooltip.effect.swim": "Swim Faster",
+  "tooltip.effect.underwater": "Breathe Underwater",
+  "tooltip.effect.fire.protection": "Fire Protection",
+  "tooltip.effect.night_vision": "Night Vision",
+  "tooltip.effect.block_protection": "Block Damage Protection",
+  "tooltip.effect.water.regen": "Health Regenerates Underwater",
+  "tooltip.effect.twilight_ore.drops": "Increased Twilight Ore Drops",
+  "tooltip.effect.no_fall": "No Fall Damage",
+  "tooltip.effect.slows": "Slows mobs for %s seconds",
+  "tooltip.effect.ranged.protection": "%s%% Ranged Damage Protection",
+  "tooltip.effect.speed": "%sx Movement Speed",
+  "tooltip.effect.magic.protection": "Poison and Magic Resistance",
+  "tooltip.effect.freeze": "Slows Hostile Mobs Within %s Blocks",
+  "tooltip.effect.ranged.increase": "+%s%% Ranged Damage",
+  "tooltip.effect.haste": "Increased Mining Speed",
   "tooltip.divine_accumulator.launch": "Lauches you into the air",
   "tooltip.divine_accumulator.fall": "Does not prevent fall damage",
   "tooltip.arcanium_attractor": "Pulls mobs toward you",
