Fixed merchant spawn

--- a/src/main/resources/assets/divinerpg/lang/it_it.json
+++ b/src/main/resources/assets/divinerpg/lang/it_it.json
@@ -118,7 +118,7 @@
   "block.divinerpg.green_fence_on.name": "Staccionata Verde",
   "block.divinerpg.ayeraco_spawn.name": "Spawn di Ayeraco",
   "block.divinerpg.king_of_scorchers_statue.name": "Statua del Re delle Giornate Torride",
-  "block.divinerpg.ancient_entity_statue.name": "Statua dell'Entità Antica",
+  "block.divinerpg.ancient_entity_statue": "Statua dell'Entità Antica",
   "block.divinerpg.ayeraco_statue.name": "Statua di Ayeraco",
   "block.divinerpg.twilight_demon_statue.name": "Statua del Demone del Crepuscolo",
   "block.divinerpg.vamacheron_statue.name": "Statua di Vamacheron",
@@ -1087,169 +1087,169 @@
   "death.attack.spike": "%1$s ha camminato sulle spine",
   "death.attack.acid": "%1$s si è sciolto nell'acido",
   "death.attack.arcana": "%1$s è stato ucciso dalla magia",
-  "entity.divinerpg.acid_hag.name": "Strega Acida",
-  "entity.divinerpg.alicanto.name": "Alicanto",
-  "entity.divinerpg.ancient_entity.name": "Entità Antica",
-  "entity.divinerpg.angry_bunny.name": "Coniglietto Arrabbiato",
-  "entity.divinerpg.apalachia_cadillion.name": "Cadillion Apalachia",
-  "entity.divinerpg.apalachia_golem.name": "Golem di Apalachia",
-  "entity.divinerpg.apalachia_tomo.name": "Tomo di Apalachia",
-  "entity.divinerpg.arid_warrior.name": "Guerriero Arido",
-  "entity.divinerpg.ayeraco_blue.name": "Ayeraco Blu",
-  "entity.divinerpg.ayeraco_green.name": "Ayeraco Verde",
-  "entity.divinerpg.ayeraco_purple.name": "Ayeraco Viola",
-  "entity.divinerpg.ayeraco_red.name": "Ayeraco Rosso",
-  "entity.divinerpg.ayeraco_yellow.name": "Ayeraco Giallo",
-  "entity.divinerpg.basilisk.name": "Basilisco",
-  "entity.divinerpg.behemoth.name": "Behemoth",
-  "entity.divinerpg.biphron.name": "Biphron",
-  "entity.divinerpg.boheimite.name": "Boheimite",
-  "entity.divinerpg.bunny.name": "Coniglietto",
-  "entity.divinerpg.caveclops.name": "Caveclops",
-  "entity.divinerpg.cave_crawler.name": "Cingolato della Grotta",
-  "entity.divinerpg.constructor.name": "Costruttore",
-  "entity.divinerpg.crab.name": "Granchio",
-  "entity.divinerpg.crypt_keeper.name": "Custode della Cripta",
-  "entity.divinerpg.cyclops.name": "Ciclope",
-  "entity.divinerpg.cymesoid.name": "Cymesoid",
-  "entity.divinerpg.datticon.name": "Datticon",
-  "entity.divinerpg.deathcryx.name": "Deathcryx",
-  "entity.divinerpg.death_hound.name": "Segugio della Morte",
-  "entity.divinerpg.demon_of_darkness.name": "Demone del Buio",
-  "entity.divinerpg.densos.name": "Densos",
-  "entity.divinerpg.desert_crawler.name": "Cingolato del Deserto",
-  "entity.divinerpg.dissiment.name": "Dissiment",
-  "entity.divinerpg.dramix.name": "Dramix",
-  "entity.divinerpg.dreamwrecker.name": "Distruttore di Sogni",
-  "entity.divinerpg.dungeon_demon.name": "Demone delle Prigioni",
-  "entity.divinerpg.duo.name": "Duo",
-  "entity.divinerpg.eden_cadillion.name": "Cadillion dell'Eden",
-  "entity.divinerpg.eden_cori.name": "Cori dell'Eden",
-  "entity.divinerpg.eden_tomo.name": "Tomo dell'Eden",
-  "entity.divinerpg.ehu.name": "Ehu",
-  "entity.divinerpg.enchanted_archer.name": "Arciere Incantato",
-  "entity.divinerpg.enchanted_warrior.name": "Guerriero Incantato",
-  "entity.divinerpg.ender_spider.name": "Ragno dell'End",
-  "entity.divinerpg.ender_triplets.name": "Triplette dell'End",
-  "entity.divinerpg.ender_watcher.name": "Osservatore dell'End",
-  "entity.divinerpg.ent.name": "Ent",
-  "entity.divinerpg.enthralled_dramcryx.name": "Dramcryx Affascinato",
-  "entity.divinerpg.epiphite.name": "Epiphite",
-  "entity.divinerpg.eternal_archer.name": "Arciere Eterno",
-  "entity.divinerpg.fractite.name": "Fractite",
-  "entity.divinerpg.frost.name": "Gelo",
-  "entity.divinerpg.frosty.name": "Gelato",
-  "entity.divinerpg.frost_archer.name": "Arciere Gelato",
-  "entity.divinerpg.fyracryx.name": "Fyracryx",
-  "entity.divinerpg.galroid.name": "Galroid",
-  "entity.divinerpg.glacon.name": "Glacon",
-  "entity.divinerpg.glacide.name": "Glacide",
-  "entity.divinerpg.gorgosion.name": "Gorgosion",
-  "entity.divinerpg.greenfeet.name": "Piedeverde",
-  "entity.divinerpg.grizzle.name": "Grizzle Marrone",
-  "entity.divinerpg.grizzle_white.name": "Grizzle Bianco",
-  "entity.divinerpg.hastreus.name": "Hastreus",
-  "entity.divinerpg.helio.name": "Helio",
-  "entity.divinerpg.hell_pig.name": "Maiale dell'Inferno",
-  "entity.divinerpg.hell_spider.name": "Ragno dell'Inferno",
-  "entity.divinerpg.herbomancer.name": "Herbomancer",
-  "entity.divinerpg.hive_queen.name": "Regina dell'Alveare",
-  "entity.divinerpg.hive_soldier.name": "Soldato dell'Alveare",
-  "entity.divinerpg.hover_stinger.name": "Pungitore Volante",
-  "entity.divinerpg.husk.name": "Husk",
-  "entity.divinerpg.jack_o_man.name": "Jack 'O' Man",
-  "entity.divinerpg.jungle_bat.name": "Pipistrello della Giungla",
-  "entity.divinerpg.jungle_dramcryx.name": "Dramcryx della Giungla",
-  "entity.divinerpg.jungle_spider.name": "Ragno della Giungla",
-  "entity.divinerpg.karos.name": "Karos",
-  "entity.divinerpg.karot.name": "Karot",
-  "entity.divinerpg.kazrotic.name": "Kazrotic",
-  "entity.divinerpg.king_crab.name": "Re Granchio",
-  "entity.divinerpg.king_of_scorchers.name": "Re delle Giornate Torride",
-  "entity.divinerpg.kobblin.name": "Kobblin",
-  "entity.divinerpg.lady_luna.name": "Lady Luna",
-  "entity.divinerpg.leorna.name": "Leorna",
-  "entity.divinerpg.lheiva.name": "Lheiva",
-  "entity.divinerpg.liopleurodon.name": "Liopleurodon",
-  "entity.divinerpg.livestock_merchant.name": "Mercante di Bestiame",
-  "entity.divinerpg.lorga.name": "Lorga",
-  "entity.divinerpg.lorga_flight.name": "Lorga Volo",
-  "entity.divinerpg.madivel.name": "Madivel",
-  "entity.divinerpg.mage.name": "Mago",
-  "entity.divinerpg.mandragora.name": "Mandragora",
-  "entity.divinerpg.megalith.name": "Megalith",
-  "entity.divinerpg.miner.name": "Minatore",
-  "entity.divinerpg.moon_wolf.name": "Lupo della Luna",
-  "entity.divinerpg.mortum_archer.name": "Archere Mortum",
-  "entity.divinerpg.mortum_cadillion.name": "Cadillion Mortum",
-  "entity.divinerpg.mysterious_man.name": "Uomo Misterioso",
-  "entity.divinerpg.mystic.name": "Mistico",
-  "entity.divinerpg.parasecta.name": "Parasecta",
-  "entity.divinerpg.paratiku.name": "Paratiku",
-  "entity.divinerpg.projectiles.name": "Proiettili",
-  "entity.divinerpg.pumpkin_spider.name": "Zucca Ragno",
-  "entity.divinerpg.quadro.name": "Quadro",
-  "entity.divinerpg.raglok_gogdure.name": "Raglok Gogdure",
-  "entity.divinerpg.rainbour.name": "Rainbour",
-  "entity.divinerpg.razorback.name": "Razorback",
-  "entity.divinerpg.rejuv_golem.name": "Golem di Rejuv",
-  "entity.divinerpg.reyvor.name": "Reyvor",
-  "entity.divinerpg.roamer.name": "Roamer",
-  "entity.divinerpg.rollum.name": "Rollum",
-  "entity.divinerpg.rotatick.name": "Rotatick",
-  "entity.divinerpg.saguaro_worm.name": "Saguaro Worm",
-  "entity.divinerpg.samek.name": "Samek",
-  "entity.divinerpg.scorcher.name": "Scorcher",
-  "entity.divinerpg.seimer.name": "Seimer",
-  "entity.divinerpg.shadahier.name": "Shadahier",
-  "entity.divinerpg.shark.name": "Squalo",
-  "entity.divinerpg.skythern_archer.name": "Arciere di Skythern",
-  "entity.divinerpg.skythern_cori.name": "Cori di Skythern",
-  "entity.divinerpg.skythern_fiend.name": "Demone di Skythern",
-  "entity.divinerpg.skythern_golem.name": "Golem di Skythern",
-  "entity.divinerpg.smelter.name": "Fonderia",
-  "entity.divinerpg.snapper.name": "Snapper",
-  "entity.divinerpg.sorcerer.name": "Sorcerer",
-  "entity.divinerpg.soul_fiend.name": "Demone dell'Anima",
-  "entity.divinerpg.soul_spider.name": "Ragno dell'Anima",
-  "entity.divinerpg.soul_stealer.name": "Ladro di Anime",
-  "entity.divinerpg.spellbinder.name": "Spellbinder",
-  "entity.divinerpg.stone_golem.name": "Golem di Pietra",
-  "entity.divinerpg.sun_archer.name": "Arciere del Sole",
-  "entity.divinerpg.tamed_angry_bunny.name": "Coniglietto Arrabbiato Addomesticato",
-  "entity.divinerpg.the_eye.name": "L'Occhio",
-  "entity.divinerpg.the_grue.name": "Il Grue",
-  "entity.divinerpg.the_hunger.name": "Il Hunger",
-  "entity.divinerpg.the_watcher.name": "L'Osservatore",
-  "entity.divinerpg.tocaxin.name": "Tocaxin",
-  "entity.divinerpg.twilight_archer.name": "Arciere del Crepuscolo",
-  "entity.divinerpg.twilight_demon.name": "Demone del Crepuscolo",
-  "entity.divinerpg.twins.name": "Gemelli",
-  "entity.divinerpg.vamacheron.name": "Vamacheron",
-  "entity.divinerpg.varek.name": "Varek",
-  "entity.divinerpg.vatticus.name": "Vatticus",
-  "entity.divinerpg.vermenous.name": "Vermenous",
-  "entity.divinerpg.vermsillion.name": "Vermsillion",
-  "entity.divinerpg.vhraak.name": "Vhraak",
-  "entity.divinerpg.whale.name": "Balena",
-  "entity.divinerpg.wildfire.name": "Wildfire",
-  "entity.divinerpg.wildwood_cadillion.name": "Cadillion del Legno Selvaggio",
-  "entity.divinerpg.wildwood_golem.name": "Golem del Legno Selvaggio",
-  "entity.divinerpg.wildwood_tomo.name": "Tomo del Legno Selvaggio",
-  "entity.divinerpg.workshop_merchant.name": "Mercante del Laboratorio",
-  "entity.divinerpg.workshop_tinkerer.name": "Riparatore del Laboratorio",
-  "entity.divinerpg.wraith.name": "Spettro",
-  "entity.divinerpg.wreck_form_1.name": "Relitto",
-  "entity.divinerpg.zelus.name": "Zelus",
-  "entity.divinerpg.zone.name": "Zone",
-  "entity.divinerpg.zoragon.name": "Zoragon",
-  "entity.divinerpg.captain_merik.name": "Capitano Merik",
-  "entity.divinerpg.dungeon_prisoner.name": "Prigioniero",
-  "entity.divinerpg.living_statue.name": "Statua Vivente",
-  "entity.divinerpg.war_general.name": "Generale di Guerra",
-  "entity.divinerpg.bohemite.name": "Bohemite",
-  "entity.divinerpg.spinarus.name": "Spinarus",
-  "entity.divinerpg.wreck_form.name": "Distruttore",
+  "entity.divinerpg.acid_hag": "Strega Acida",
+  "entity.divinerpg.alicanto": "Alicanto",
+  "entity.divinerpg.ancient_entity": "Entità Antica",
+  "entity.divinerpg.angry_bunny": "Coniglietto Arrabbiato",
+  "entity.divinerpg.apalachia_cadillion": "Cadillion Apalachia",
+  "entity.divinerpg.apalachia_golem": "Golem di Apalachia",
+  "entity.divinerpg.apalachia_tomo": "Tomo di Apalachia",
+  "entity.divinerpg.arid_warrior": "Guerriero Arido",
+  "entity.divinerpg.ayeraco_blue": "Ayeraco Blu",
+  "entity.divinerpg.ayeraco_green": "Ayeraco Verde",
+  "entity.divinerpg.ayeraco_purple": "Ayeraco Viola",
+  "entity.divinerpg.ayeraco_red": "Ayeraco Rosso",
+  "entity.divinerpg.ayeraco_yellow": "Ayeraco Giallo",
+  "entity.divinerpg.basilisk": "Basilisco",
+  "entity.divinerpg.behemoth": "Behemoth",
+  "entity.divinerpg.biphron": "Biphron",
+  "entity.divinerpg.boheimite": "Boheimite",
+  "entity.divinerpg.bunny": "Coniglietto",
+  "entity.divinerpg.caveclops": "Caveclops",
+  "entity.divinerpg.cave_crawler": "Cingolato della Grotta",
+  "entity.divinerpg.constructor": "Costruttore",
+  "entity.divinerpg.crab": "Granchio",
+  "entity.divinerpg.crypt_keeper": "Custode della Cripta",
+  "entity.divinerpg.cyclops": "Ciclope",
+  "entity.divinerpg.cymesoid": "Cymesoid",
+  "entity.divinerpg.datticon": "Datticon",
+  "entity.divinerpg.deathcryx": "Deathcryx",
+  "entity.divinerpg.death_hound": "Segugio della Morte",
+  "entity.divinerpg.demon_of_darkness": "Demone del Buio",
+  "entity.divinerpg.densos": "Densos",
+  "entity.divinerpg.desert_crawler": "Cingolato del Deserto",
+  "entity.divinerpg.dissiment": "Dissiment",
+  "entity.divinerpg.dramix": "Dramix",
+  "entity.divinerpg.dreamwrecker": "Distruttore di Sogni",
+  "entity.divinerpg.dungeon_demon": "Demone delle Prigioni",
+  "entity.divinerpg.duo": "Duo",
+  "entity.divinerpg.eden_cadillion": "Cadillion dell'Eden",
+  "entity.divinerpg.eden_cori": "Cori dell'Eden",
+  "entity.divinerpg.eden_tomo": "Tomo dell'Eden",
+  "entity.divinerpg.ehu": "Ehu",
+  "entity.divinerpg.enchanted_archer": "Arciere Incantato",
+  "entity.divinerpg.enchanted_warrior": "Guerriero Incantato",
+  "entity.divinerpg.ender_spider": "Ragno dell'End",
+  "entity.divinerpg.ender_triplets": "Triplette dell'End",
+  "entity.divinerpg.ender_watcher": "Osservatore dell'End",
+  "entity.divinerpg.ent": "Ent",
+  "entity.divinerpg.enthralled_dramcryx": "Dramcryx Affascinato",
+  "entity.divinerpg.epiphite": "Epiphite",
+  "entity.divinerpg.eternal_archer": "Arciere Eterno",
+  "entity.divinerpg.fractite": "Fractite",
+  "entity.divinerpg.frost": "Gelo",
+  "entity.divinerpg.frosty": "Gelato",
+  "entity.divinerpg.frost_archer": "Arciere Gelato",
+  "entity.divinerpg.fyracryx": "Fyracryx",
+  "entity.divinerpg.galroid": "Galroid",
+  "entity.divinerpg.glacon": "Glacon",
+  "entity.divinerpg.glacide": "Glacide",
+  "entity.divinerpg.gorgosion": "Gorgosion",
+  "entity.divinerpg.greenfeet": "Piedeverde",
+  "entity.divinerpg.grizzle": "Grizzle Marrone",
+  "entity.divinerpg.grizzle_white": "Grizzle Bianco",
+  "entity.divinerpg.hastreus": "Hastreus",
+  "entity.divinerpg.helio": "Helio",
+  "entity.divinerpg.hell_pig": "Maiale dell'Inferno",
+  "entity.divinerpg.hell_spider": "Ragno dell'Inferno",
+  "entity.divinerpg.herbomancer": "Herbomancer",
+  "entity.divinerpg.hive_queen": "Regina dell'Alveare",
+  "entity.divinerpg.hive_soldier": "Soldato dell'Alveare",
+  "entity.divinerpg.hover_stinger": "Pungitore Volante",
+  "entity.divinerpg.husk": "Husk",
+  "entity.divinerpg.jack_o_man": "Jack 'O' Man",
+  "entity.divinerpg.jungle_bat": "Pipistrello della Giungla",
+  "entity.divinerpg.jungle_dramcryx": "Dramcryx della Giungla",
+  "entity.divinerpg.jungle_spider": "Ragno della Giungla",
+  "entity.divinerpg.karos": "Karos",
+  "entity.divinerpg.karot": "Karot",
+  "entity.divinerpg.kazrotic": "Kazrotic",
+  "entity.divinerpg.king_crab": "Re Granchio",
+  "entity.divinerpg.king_of_scorchers": "Re delle Giornate Torride",
+  "entity.divinerpg.kobblin": "Kobblin",
+  "entity.divinerpg.lady_luna": "Lady Luna",
+  "entity.divinerpg.leorna": "Leorna",
+  "entity.divinerpg.lheiva": "Lheiva",
+  "entity.divinerpg.liopleurodon": "Liopleurodon",
+  "entity.divinerpg.livestock_merchant": "Mercante di Bestiame",
+  "entity.divinerpg.lorga": "Lorga",
+  "entity.divinerpg.lorga_flight": "Lorga Volo",
+  "entity.divinerpg.madivel": "Madivel",
+  "entity.divinerpg.mage": "Mago",
+  "entity.divinerpg.mandragora": "Mandragora",
+  "entity.divinerpg.megalith": "Megalith",
+  "entity.divinerpg.miner": "Minatore",
+  "entity.divinerpg.moon_wolf": "Lupo della Luna",
+  "entity.divinerpg.mortum_archer": "Archere Mortum",
+  "entity.divinerpg.mortum_cadillion": "Cadillion Mortum",
+  "entity.divinerpg.mysterious_man": "Uomo Misterioso",
+  "entity.divinerpg.mystic": "Mistico",
+  "entity.divinerpg.parasecta": "Parasecta",
+  "entity.divinerpg.paratiku": "Paratiku",
+  "entity.divinerpg.projectiles": "Proiettili",
+  "entity.divinerpg.pumpkin_spider": "Zucca Ragno",
+  "entity.divinerpg.quadro": "Quadro",
+  "entity.divinerpg.raglok_gogdure": "Raglok Gogdure",
+  "entity.divinerpg.rainbour": "Rainbour",
+  "entity.divinerpg.razorback": "Razorback",
+  "entity.divinerpg.rejuv_golem": "Golem di Rejuv",
+  "entity.divinerpg.reyvor": "Reyvor",
+  "entity.divinerpg.roamer": "Roamer",
+  "entity.divinerpg.rollum": "Rollum",
+  "entity.divinerpg.rotatick": "Rotatick",
+  "entity.divinerpg.saguaro_worm": "Saguaro Worm",
+  "entity.divinerpg.samek": "Samek",
+  "entity.divinerpg.scorcher": "Scorcher",
+  "entity.divinerpg.seimer": "Seimer",
+  "entity.divinerpg.shadahier": "Shadahier",
+  "entity.divinerpg.shark": "Squalo",
+  "entity.divinerpg.skythern_archer": "Arciere di Skythern",
+  "entity.divinerpg.skythern_cori": "Cori di Skythern",
+  "entity.divinerpg.skythern_fiend": "Demone di Skythern",
+  "entity.divinerpg.skythern_golem": "Golem di Skythern",
+  "entity.divinerpg.smelter": "Fonderia",
+  "entity.divinerpg.snapper": "Snapper",
+  "entity.divinerpg.sorcerer": "Sorcerer",
+  "entity.divinerpg.soul_fiend": "Demone dell'Anima",
+  "entity.divinerpg.soul_spider": "Ragno dell'Anima",
+  "entity.divinerpg.soul_stealer": "Ladro di Anime",
+  "entity.divinerpg.spellbinder": "Spellbinder",
+  "entity.divinerpg.stone_golem": "Golem di Pietra",
+  "entity.divinerpg.sun_archer": "Arciere del Sole",
+  "entity.divinerpg.tamed_angry_bunny": "Coniglietto Arrabbiato Addomesticato",
+  "entity.divinerpg.the_eye": "L'Occhio",
+  "entity.divinerpg.the_grue": "Il Grue",
+  "entity.divinerpg.the_hunger": "Il Hunger",
+  "entity.divinerpg.the_watcher": "L'Osservatore",
+  "entity.divinerpg.tocaxin": "Tocaxin",
+  "entity.divinerpg.twilight_archer": "Arciere del Crepuscolo",
+  "entity.divinerpg.twilight_demon": "Demone del Crepuscolo",
+  "entity.divinerpg.twins": "Gemelli",
+  "entity.divinerpg.vamacheron": "Vamacheron",
+  "entity.divinerpg.varek": "Varek",
+  "entity.divinerpg.vatticus": "Vatticus",
+  "entity.divinerpg.vermenous": "Vermenous",
+  "entity.divinerpg.vermsillion": "Vermsillion",
+  "entity.divinerpg.vhraak": "Vhraak",
+  "entity.divinerpg.whale": "Balena",
+  "entity.divinerpg.wildfire": "Wildfire",
+  "entity.divinerpg.wildwood_cadillion": "Cadillion del Legno Selvaggio",
+  "entity.divinerpg.wildwood_golem": "Golem del Legno Selvaggio",
+  "entity.divinerpg.wildwood_tomo": "Tomo del Legno Selvaggio",
+  "entity.divinerpg.workshop_merchant": "Mercante del Laboratorio",
+  "entity.divinerpg.workshop_tinkerer": "Riparatore del Laboratorio",
+  "entity.divinerpg.wraith": "Spettro",
+  "entity.divinerpg.wreck_form_1": "Relitto",
+  "entity.divinerpg.zelus": "Zelus",
+  "entity.divinerpg.zone": "Zone",
+  "entity.divinerpg.zoragon": "Zoragon",
+  "entity.divinerpg.captain_merik": "Capitano Merik",
+  "entity.divinerpg.dungeon_prisoner": "Prigioniero",
+  "entity.divinerpg.living_statue": "Statua Vivente",
+  "entity.divinerpg.war_general": "Generale di Guerra",
+  "entity.divinerpg.bohemite": "Bohemite",
+  "entity.divinerpg.spinarus": "Spinarus",
+  "entity.divinerpg.wreck_form": "Distruttore",
   "advancement.craft_divine_sword": "Un Piano Divino",
   "advancement.craft_divine_sword.desc": "Crafta una Spada Divina",
   "advancement.craft_eden_lamp": "Una Lampada",
