--- a/src/main/resources/assets/divinerpg/lang/ru_ru.json
+++ b/src/main/resources/assets/divinerpg/lang/ru_ru.json
@@ -118,7 +118,7 @@
   "block.divinerpg.green_fence_on.name": "Зелёная изгородь ON",
   "block.divinerpg.ayeraco_spawn.name": "Айрако спавн",
   "block.divinerpg.king_of_scorchers_statue.name": "Статуя короля скорчеров",
-  "block.divinerpg.ancient_entity_statue.name": "Статуя древней сущности",
+  "block.divinerpg.ancient_entity_statue": "Статуя древней сущности",
   "block.divinerpg.ayeraco_statue.name": "Статуя Айрако",
   "block.divinerpg.twilight_demon_statue.name": "Статуя сумеречного демона",
   "block.divinerpg.vamacheron_statue.name": "Статуя вамашерона",
@@ -1088,162 +1088,162 @@
   "death.attack.spike": "%1$s walked on spikes",
   "death.attack.acid": "%1$s melted in acid",
   "death.attack.arcana": "%1$s was killed by magic",
-  "entity.divinerpg.acid_hag.name": "Acid Hag",
-  "entity.divinerpg.advanced_cori.name": "Advanced Cori",
-  "entity.divinerpg.alicanto.name": "Alicanto",
-  "entity.divinerpg.ancient_entity.name": "Ancient Entity",
-  "entity.divinerpg.angry_bunny.name": "Angry Bunny",
-  "entity.divinerpg.apalachia_cadillion.name": "Apalachia Cadillion",
-  "entity.divinerpg.apalachia_golem.name": "Apalachia Golem",
-  "entity.divinerpg.apalachia_tomo.name": "Apalachia Tomo",
-  "entity.divinerpg.arid_warrior.name": "Arid Warrior",
-  "entity.divinerpg.ayeraco_blue.name": "Ayeraco Blue",
-  "entity.divinerpg.ayeraco_green.name": "Ayeraco Green",
-  "entity.divinerpg.ayeraco_purple.name": "Ayeraco Purple",
-  "entity.divinerpg.ayeraco_red.name": "Ayeraco Red",
-  "entity.divinerpg.ayeraco_yellow.name": "Ayeraco Yellow",
-  "entity.divinerpg.basilisk.name": "Basilisk",
-  "entity.divinerpg.behemoth.name": "Behemoth",
-  "entity.divinerpg.biphron.name": "Biphron",
-  "entity.divinerpg.boheimite.name": "Boheimite",
-  "entity.divinerpg.bunny.name": "Bunny",
-  "entity.divinerpg.caveclops.name": "Caveclops",
-  "entity.divinerpg.cave_crawler.name": "Cave Crawler",
-  "entity.divinerpg.constructor.name": "Constructor",
-  "entity.divinerpg.crab.name": "Crab",
-  "entity.divinerpg.crypt_keeper.name": "Crypt Keeper",
-  "entity.divinerpg.cyclops.name": "Cyclops",
-  "entity.divinerpg.cymesoid.name": "Cymesoid",
-  "entity.divinerpg.datticon.name": "Datticon",
-  "entity.divinerpg.deathcryx.name": "Deathcryx",
-  "entity.divinerpg.death_hound.name": "Death Hound",
-  "entity.divinerpg.demon_of_darkness.name": "Demon Of Darkness",
-  "entity.divinerpg.densos.name": "Densos",
-  "entity.divinerpg.desert_crawler.name": "Desert Crawler",
-  "entity.divinerpg.dissiment.name": "Dissiment",
-  "entity.divinerpg.dramix.name": "Dramix",
-  "entity.divinerpg.dreamwrecker.name": "Dreamwrecker",
-  "entity.divinerpg.dungeon_demon.name": "Dungeon Demon",
-  "entity.divinerpg.duo.name": "Duo",
-  "entity.divinerpg.eden_cadillion.name": "Eden Cadillion",
-  "entity.divinerpg.eden_tomo.name": "Eden Tomo",
-  "entity.divinerpg.ehu.name": "Ehu",
-  "entity.divinerpg.enchanted_archer.name": "Enchanted Archer",
-  "entity.divinerpg.enchanted_warrior.name": "Enchanted Warrior",
-  "entity.divinerpg.ender_spider.name": "Ender Spider",
-  "entity.divinerpg.ender_triplets.name": "Ender Triplets",
-  "entity.divinerpg.ender_watcher.name": "Ender Watcher",
-  "entity.divinerpg.ent.name": "Ent",
-  "entity.divinerpg.enthralled_dramcryx.name": "Enthralled Dramcryx",
-  "entity.divinerpg.epiphite.name": "Epiphite",
-  "entity.divinerpg.eternal_archer.name": "Eternal Archer",
-  "entity.divinerpg.fractite.name": "Fractite",
-  "entity.divinerpg.frost.name": "Frost",
-  "entity.divinerpg.frosty.name": "Frosty",
-  "entity.divinerpg.frost_archer.name": "Frost Archer",
-  "entity.divinerpg.fyracryx.name": "Fyracryx",
-  "entity.divinerpg.galroid.name": "Galroid",
-  "entity.divinerpg.glacon.name": "Glacon",
-  "entity.divinerpg.glacide.name": "Glacide",
-  "entity.divinerpg.gorgosion.name": "Gorgosion",
-  "entity.divinerpg.greenfeet.name": "Greenfeet",
-  "entity.divinerpg.grizzle.name": "Brown Grizzle",
-  "entity.divinerpg.grizzle_white.name": "White Grizzle",
-  "entity.divinerpg.hastreus.name": "Hastreus",
-  "entity.divinerpg.helio.name": "Helio",
-  "entity.divinerpg.hell_pig.name": "Hell Pig",
-  "entity.divinerpg.hell_spider.name": "Hell Spider",
-  "entity.divinerpg.herbomancer.name": "Herbomancer",
-  "entity.divinerpg.hive_queen.name": "Hive Queen",
-  "entity.divinerpg.hive_soldier.name": "Hive Soldier",
-  "entity.divinerpg.hover_stinger.name": "Hover Stinger",
-  "entity.divinerpg.husk.name": "Husk",
-  "entity.divinerpg.jack_o_man.name": "Jack 'O' Man",
-  "entity.divinerpg.jungle_bat.name": "Jungle Bat",
-  "entity.divinerpg.jungle_dramcryx.name": "Jungle Dramcryx",
-  "entity.divinerpg.jungle_spider.name": "Jungle Spider",
-  "entity.divinerpg.karos.name": "Karos",
-  "entity.divinerpg.karot.name": "Karot",
-  "entity.divinerpg.kazrotic.name": "Kazrotic",
-  "entity.divinerpg.king_crab.name": "King Crab",
-  "entity.divinerpg.king_of_scorchers.name": "King Of Scorchers",
-  "entity.divinerpg.kobblin.name": "Kobblin",
-  "entity.divinerpg.lady_luna.name": "Lady Luna",
-  "entity.divinerpg.leorna.name": "Leorna",
-  "entity.divinerpg.lheiva.name": "Lheiva",
-  "entity.divinerpg.liopleurodon.name": "Liopleurodon",
-  "entity.divinerpg.livestock_merchant.name": "Livestock Merchant",
-  "entity.divinerpg.lorga.name": "Lorga",
-  "entity.divinerpg.lorga_flight.name": "Lorga Flight",
-  "entity.divinerpg.madivel.name": "Madivel",
-  "entity.divinerpg.mage.name": "Mage",
-  "entity.divinerpg.mandragora.name": "Mandragora",
-  "entity.divinerpg.megalith.name": "Megalith",
-  "entity.divinerpg.miner.name": "Miner",
-  "entity.divinerpg.moon_wolf.name": "Moon Wolf",
-  "entity.divinerpg.mortum_archer.name": "Mortum Archer",
-  "entity.divinerpg.mortum_cadillion.name": "Mortum Cadillion",
-  "entity.divinerpg.mysterious_man.name": "Mysterious Man",
-  "entity.divinerpg.mystic.name": "Mystic",
-  "entity.divinerpg.parasecta.name": "Parasecta",
-  "entity.divinerpg.paratiku.name": "Paratiku",
-  "entity.divinerpg.projectiles.name": "Projectiles",
-  "entity.divinerpg.pumpkin_spider.name": "Pumpkin Spider",
-  "entity.divinerpg.quadro.name": "Quadro",
-  "entity.divinerpg.raglok_gogdure.name": "Raglok Gogdure",
-  "entity.divinerpg.rainbour.name": "Rainbour",
-  "entity.divinerpg.razorback.name": "Razorback",
-  "entity.divinerpg.rejuv_golem.name": "Golem Of Rejuv",
-  "entity.divinerpg.reyvor.name": "Reyvor",
-  "entity.divinerpg.roamer.name": "Roamer",
-  "entity.divinerpg.rollum.name": "Rollum",
-  "entity.divinerpg.rotatick.name": "Rotatick",
-  "entity.divinerpg.saguaro_worm.name": "Saguaro Worm",
-  "entity.divinerpg.samek.name": "Samek",
-  "entity.divinerpg.scorcher.name": "Scorcher",
-  "entity.divinerpg.seimer.name": "Seimer",
-  "entity.divinerpg.shadahier.name": "Shadahier",
-  "entity.divinerpg.shark.name": "Shark",
-  "entity.divinerpg.skythern_archer.name": "Skythern Archer",
-  "entity.divinerpg.skythern_fiend.name": "Skythern Fiend",
-  "entity.divinerpg.skythern_golem.name": "Skythern Golem",
-  "entity.divinerpg.smelter.name": "Smelter",
-  "entity.divinerpg.snapper.name": "Snapper",
-  "entity.divinerpg.sorcerer.name": "Sorcerer",
-  "entity.divinerpg.soul_fiend.name": "Soul Fiend",
-  "entity.divinerpg.soul_spider.name": "Soul Spider",
-  "entity.divinerpg.soul_stealer.name": "Soul Stealer",
-  "entity.divinerpg.spellbinder.name": "Spellbinder",
-  "entity.divinerpg.stone_golem.name": "Stone Golem",
-  "entity.divinerpg.sun_archer.name": "Sun Archer",
-  "entity.divinerpg.tamed_angry_bunny.name": "Tamed Angry Bunny",
-  "entity.divinerpg.the_eye.name": "The Eye",
-  "entity.divinerpg.the_grue.name": "The Grue",
-  "entity.divinerpg.the_hunger.name": "The Hunger",
-  "entity.divinerpg.the_watcher.name": "The Watcher",
-  "entity.divinerpg.tocaxin.name": "Tocaxin",
-  "entity.divinerpg.twilight_archer.name": "Twilight Archer",
-  "entity.divinerpg.twilight_demon.name": "Twilight Demon",
-  "entity.divinerpg.twins.name": "Twins",
-  "entity.divinerpg.vamacheron.name": "Vamacheron",
-  "entity.divinerpg.verek.name": "Verek",
-  "entity.divinerpg.vatticus.name": "Vatticus",
-  "entity.divinerpg.vermenous.name": "Vermenous",
-  "entity.divinerpg.vermsillion.name": "Vermsillion",
-  "entity.divinerpg.vhraak.name": "Vhraak",
-  "entity.divinerpg.weak_cori.name": "Weak Cori",
-  "entity.divinerpg.whale.name": "Whale",
-  "entity.divinerpg.wildfire.name": "Wildfire",
-  "entity.divinerpg.wildwood_cadillion.name": "Wildwood Cadillion",
-  "entity.divinerpg.wildwood_golem.name": "Wildwood Golem",
-  "entity.divinerpg.wildwood_tomo.name": "Wildwood Tomo",
-  "entity.divinerpg.workshop_merchant.name": "Workshop Merchant",
-  "entity.divinerpg.workshop_tinkerer.name": "Workshop Tinkerer",
-  "entity.divinerpg.wraith.name": "Wraith",
-  "entity.divinerpg.wreck_form_1.name": "Wreck",
-  "entity.divinerpg.zelus.name": "Zelus",
-  "entity.divinerpg.zone.name": "Zone",
-  "entity.divinerpg.zoragon.name": "Zoragon",
+  "entity.divinerpg.acid_hag": "Acid Hag",
+  "entity.divinerpg.advanced_cori": "Advanced Cori",
+  "entity.divinerpg.alicanto": "Alicanto",
+  "entity.divinerpg.ancient_entity": "Ancient Entity",
+  "entity.divinerpg.angry_bunny": "Angry Bunny",
+  "entity.divinerpg.apalachia_cadillion": "Apalachia Cadillion",
+  "entity.divinerpg.apalachia_golem": "Apalachia Golem",
+  "entity.divinerpg.apalachia_tomo": "Apalachia Tomo",
+  "entity.divinerpg.arid_warrior": "Arid Warrior",
+  "entity.divinerpg.ayeraco_blue": "Ayeraco Blue",
+  "entity.divinerpg.ayeraco_green": "Ayeraco Green",
+  "entity.divinerpg.ayeraco_purple": "Ayeraco Purple",
+  "entity.divinerpg.ayeraco_red": "Ayeraco Red",
+  "entity.divinerpg.ayeraco_yellow": "Ayeraco Yellow",
+  "entity.divinerpg.basilisk": "Basilisk",
+  "entity.divinerpg.behemoth": "Behemoth",
+  "entity.divinerpg.biphron": "Biphron",
+  "entity.divinerpg.boheimite": "Boheimite",
+  "entity.divinerpg.bunny": "Bunny",
+  "entity.divinerpg.caveclops": "Caveclops",
+  "entity.divinerpg.cave_crawler": "Cave Crawler",
+  "entity.divinerpg.constructor": "Constructor",
+  "entity.divinerpg.crab": "Crab",
+  "entity.divinerpg.crypt_keeper": "Crypt Keeper",
+  "entity.divinerpg.cyclops": "Cyclops",
+  "entity.divinerpg.cymesoid": "Cymesoid",
+  "entity.divinerpg.datticon": "Datticon",
+  "entity.divinerpg.deathcryx": "Deathcryx",
+  "entity.divinerpg.death_hound": "Death Hound",
+  "entity.divinerpg.demon_of_darkness": "Demon Of Darkness",
+  "entity.divinerpg.densos": "Densos",
+  "entity.divinerpg.desert_crawler": "Desert Crawler",
+  "entity.divinerpg.dissiment": "Dissiment",
+  "entity.divinerpg.dramix": "Dramix",
+  "entity.divinerpg.dreamwrecker": "Dreamwrecker",
+  "entity.divinerpg.dungeon_demon": "Dungeon Demon",
+  "entity.divinerpg.duo": "Duo",
+  "entity.divinerpg.eden_cadillion": "Eden Cadillion",
+  "entity.divinerpg.eden_tomo": "Eden Tomo",
+  "entity.divinerpg.ehu": "Ehu",
+  "entity.divinerpg.enchanted_archer": "Enchanted Archer",
+  "entity.divinerpg.enchanted_warrior": "Enchanted Warrior",
+  "entity.divinerpg.ender_spider": "Ender Spider",
+  "entity.divinerpg.ender_triplets": "Ender Triplets",
+  "entity.divinerpg.ender_watcher": "Ender Watcher",
+  "entity.divinerpg.ent": "Ent",
+  "entity.divinerpg.enthralled_dramcryx": "Enthralled Dramcryx",
+  "entity.divinerpg.epiphite": "Epiphite",
+  "entity.divinerpg.eternal_archer": "Eternal Archer",
+  "entity.divinerpg.fractite": "Fractite",
+  "entity.divinerpg.frost": "Frost",
+  "entity.divinerpg.frosty": "Frosty",
+  "entity.divinerpg.frost_archer": "Frost Archer",
+  "entity.divinerpg.fyracryx": "Fyracryx",
+  "entity.divinerpg.galroid": "Galroid",
+  "entity.divinerpg.glacon": "Glacon",
+  "entity.divinerpg.glacide": "Glacide",
+  "entity.divinerpg.gorgosion": "Gorgosion",
+  "entity.divinerpg.greenfeet": "Greenfeet",
+  "entity.divinerpg.grizzle": "Brown Grizzle",
+  "entity.divinerpg.grizzle_white": "White Grizzle",
+  "entity.divinerpg.hastreus": "Hastreus",
+  "entity.divinerpg.helio": "Helio",
+  "entity.divinerpg.hell_pig": "Hell Pig",
+  "entity.divinerpg.hell_spider": "Hell Spider",
+  "entity.divinerpg.herbomancer": "Herbomancer",
+  "entity.divinerpg.hive_queen": "Hive Queen",
+  "entity.divinerpg.hive_soldier": "Hive Soldier",
+  "entity.divinerpg.hover_stinger": "Hover Stinger",
+  "entity.divinerpg.husk": "Husk",
+  "entity.divinerpg.jack_o_man": "Jack 'O' Man",
+  "entity.divinerpg.jungle_bat": "Jungle Bat",
+  "entity.divinerpg.jungle_dramcryx": "Jungle Dramcryx",
+  "entity.divinerpg.jungle_spider": "Jungle Spider",
+  "entity.divinerpg.karos": "Karos",
+  "entity.divinerpg.karot": "Karot",
+  "entity.divinerpg.kazrotic": "Kazrotic",
+  "entity.divinerpg.king_crab": "King Crab",
+  "entity.divinerpg.king_of_scorchers": "King Of Scorchers",
+  "entity.divinerpg.kobblin": "Kobblin",
+  "entity.divinerpg.lady_luna": "Lady Luna",
+  "entity.divinerpg.leorna": "Leorna",
+  "entity.divinerpg.lheiva": "Lheiva",
+  "entity.divinerpg.liopleurodon": "Liopleurodon",
+  "entity.divinerpg.livestock_merchant": "Livestock Merchant",
+  "entity.divinerpg.lorga": "Lorga",
+  "entity.divinerpg.lorga_flight": "Lorga Flight",
+  "entity.divinerpg.madivel": "Madivel",
+  "entity.divinerpg.mage": "Mage",
+  "entity.divinerpg.mandragora": "Mandragora",
+  "entity.divinerpg.megalith": "Megalith",
+  "entity.divinerpg.miner": "Miner",
+  "entity.divinerpg.moon_wolf": "Moon Wolf",
+  "entity.divinerpg.mortum_archer": "Mortum Archer",
+  "entity.divinerpg.mortum_cadillion": "Mortum Cadillion",
+  "entity.divinerpg.mysterious_man": "Mysterious Man",
+  "entity.divinerpg.mystic": "Mystic",
+  "entity.divinerpg.parasecta": "Parasecta",
+  "entity.divinerpg.paratiku": "Paratiku",
+  "entity.divinerpg.projectiles": "Projectiles",
+  "entity.divinerpg.pumpkin_spider": "Pumpkin Spider",
+  "entity.divinerpg.quadro": "Quadro",
+  "entity.divinerpg.raglok_gogdure": "Raglok Gogdure",
+  "entity.divinerpg.rainbour": "Rainbour",
+  "entity.divinerpg.razorback": "Razorback",
+  "entity.divinerpg.rejuv_golem": "Golem Of Rejuv",
+  "entity.divinerpg.reyvor": "Reyvor",
+  "entity.divinerpg.roamer": "Roamer",
+  "entity.divinerpg.rollum": "Rollum",
+  "entity.divinerpg.rotatick": "Rotatick",
+  "entity.divinerpg.saguaro_worm": "Saguaro Worm",
+  "entity.divinerpg.samek": "Samek",
+  "entity.divinerpg.scorcher": "Scorcher",
+  "entity.divinerpg.seimer": "Seimer",
+  "entity.divinerpg.shadahier": "Shadahier",
+  "entity.divinerpg.shark": "Shark",
+  "entity.divinerpg.skythern_archer": "Skythern Archer",
+  "entity.divinerpg.skythern_fiend": "Skythern Fiend",
+  "entity.divinerpg.skythern_golem": "Skythern Golem",
+  "entity.divinerpg.smelter": "Smelter",
+  "entity.divinerpg.snapper": "Snapper",
+  "entity.divinerpg.sorcerer": "Sorcerer",
+  "entity.divinerpg.soul_fiend": "Soul Fiend",
+  "entity.divinerpg.soul_spider": "Soul Spider",
+  "entity.divinerpg.soul_stealer": "Soul Stealer",
+  "entity.divinerpg.spellbinder": "Spellbinder",
+  "entity.divinerpg.stone_golem": "Stone Golem",
+  "entity.divinerpg.sun_archer": "Sun Archer",
+  "entity.divinerpg.tamed_angry_bunny": "Tamed Angry Bunny",
+  "entity.divinerpg.the_eye": "The Eye",
+  "entity.divinerpg.the_grue": "The Grue",
+  "entity.divinerpg.the_hunger": "The Hunger",
+  "entity.divinerpg.the_watcher": "The Watcher",
+  "entity.divinerpg.tocaxin": "Tocaxin",
+  "entity.divinerpg.twilight_archer": "Twilight Archer",
+  "entity.divinerpg.twilight_demon": "Twilight Demon",
+  "entity.divinerpg.twins": "Twins",
+  "entity.divinerpg.vamacheron": "Vamacheron",
+  "entity.divinerpg.verek": "Verek",
+  "entity.divinerpg.vatticus": "Vatticus",
+  "entity.divinerpg.vermenous": "Vermenous",
+  "entity.divinerpg.vermsillion": "Vermsillion",
+  "entity.divinerpg.vhraak": "Vhraak",
+  "entity.divinerpg.weak_cori": "Weak Cori",
+  "entity.divinerpg.whale": "Whale",
+  "entity.divinerpg.wildfire": "Wildfire",
+  "entity.divinerpg.wildwood_cadillion": "Wildwood Cadillion",
+  "entity.divinerpg.wildwood_golem": "Wildwood Golem",
+  "entity.divinerpg.wildwood_tomo": "Wildwood Tomo",
+  "entity.divinerpg.workshop_merchant": "Workshop Merchant",
+  "entity.divinerpg.workshop_tinkerer": "Workshop Tinkerer",
+  "entity.divinerpg.wraith": "Wraith",
+  "entity.divinerpg.wreck_form_1": "Wreck",
+  "entity.divinerpg.zelus": "Zelus",
+  "entity.divinerpg.zone": "Zone",
+  "entity.divinerpg.zoragon": "Zoragon",
   "advancement.craft_divine_sword": "A Divine Plan",
   "advancement.craft_divine_sword.desc": "Craft a Divine Sword",
   "advancement.craft_eden_lamp": "One Lamp",
